# srimpy

./: .coveragerc  LICENSE  NOTES.md  README.md  TODO.md  dev.py  hole.txt  monkeytype.sqlite3  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
src/srim/: config.py  output.py
src/srim/core/: elementdb.py  utils.py
srim/: __init__.py  config.py  input.py  output.py  output.pyi  plot.py  srim.py  types.py
srim/core/: __init__.py  element.py  ion.py  layer.py  material.py  target.py  units.py  utils.py
srim/data/: elements.json  elements.toml
tests/: test_integration.py  test_output.py  test_srim.py
tests/core/: test_element.py  test_elementdb.py  test_ion.py  test_layer.py  test_material.py  test_target.py
