[tool.poetry]
name = "srimpy"
version = "0.1.0"
description = ""
authors = ["yobmod <yobmod@gmail.com>"]

[tool.poetry.dependencies]
# basics
python = "^3.7"
typing-extensions = "*"
numpy = {git = "https://github.com/numpy/numpy.git", branch="master"}
matplotlib = "*"  # bring numpy, pillow
pillow = "*"
rich = "*"
pretty-errors = "*"



# general
more-itertools = "*"
# toolz = "*"  # cytoolz
# pydantic = "*"
attrs = "*"
# toml = "*"
# ordered-set = "*"
# bidict = "*"
# cattrs = "*"
# attrs-serde = "*"

# seaborn = "*"



[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"
coverage = {version = "*", optional = true, extras = ["toml"]}
pytest-cov = "*"
pytest-mypy = "*"
pytest-sugar = "*"
pytest-xdist = "*"
pytest-mock = "^3.5.1"
pytest-pythonpath = "*"
pylama = "*"
autopep8 = "*"
flake8 = "*"
flake8-comprehensions = "*"
flake8-bugbear = "*"
flake8-annotations-complexity = "*"
pdbpp = "*"
pytest-srcpaths = "^1.0.2"
# toml-sort = "^0.18.0"
PyYAML = "^5.4.1"




[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.masonry.api"

