[tool.poetry]
name = "srimpy"
version = "0.1.0"
description = ""
authors = ["yobmod <yobmod@gmail.com>"]

[tool.poetry.dependencies]
# basics
python = "^3.7"
typing-extensions = "*"
numpy = "*"
matplotlib = "*"  # bring numpy, pillow

# pillow = "*"
# rich = "*"
# pretty-errors = "*"



# general
# more-itertools = "*"
# attrs = "*"
# toolz = "*"  # cytoolz
# pydantic = "*"


# ordered-set = "*"
# bidict = "*"

# cattrs = "*"
# attrs-serde = "*"

# seaborn = "*"



[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"
tox = "*"
coverage = {version = "*", optional = true, extras = ["toml"]}
pytest-cov = "*"
pytest-mypy = "*"
pytest-sugar = "*"
pytest-xdist = "*"
pytest-mock = "^3.5.1"
pytest-pythonpath = "*"
pylama = "*"
autopep8 = "*"
flake8 = "*"
flake8-comprehensions = "*"
flake8-bugbear = "*"
flake8-annotations-complexity = "*"
pytest-srcpaths = "^1.0.2"
toml = "^0.10.2"        # for dev.py
PyYAML = "^5.4.1"
MonkeyType = "^20.5.0"
pytest-monkeytype = "^1.1.0"
toml-sort = "^0.19.0"




[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.masonry.api"

